--- a/lehoi.html
+++ b/lehoi.html
@@ -148,7 +148,7 @@
         .hero{
             width: 100%;
             height: auto;
-            background: url(https://imgur.com/Zs7o9nU.png);
+            background: url(https://i.imgur.com/Zs7o9nU.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -492,27 +492,27 @@
     <main>
         <div class="grid-container">
             <div class="grid-item" onclick="showinfoBox('Lễ hội Miếu Bà Rá', 'Lễ hội miếu Bà Rá diễn ra trong 3 ngày (từ mùng 1 đến hết ngày mùng 3 tháng 3 âm lịch). Nguồn: https://baobinhphuoc.com.vn/news/19/156116/le-hoi-mieu-ba-ra-giap-thin-dien-ra-tu-ngay-9-den-11-4-2024. Video: Đình Đây Đó', 'https://www.youtube.com/embed/am_n1PpSxNI?si=ot50BI7FAdsl3haH','')">
-                <img src="https://imgur.com/YGIoo1y.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/YGIoo1y.png" alt="Uploaded Image">
                 <h3>Lễ hội Miếu Bà Rá</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Lễ hội Cầu bông ở Đình Thần Hưng Long', 'Hàng năm vào ngày 16-7 âm lịch, lễ hội Cầu bông đình thần Hưng Long được tổ chức để phát huy những giá trị văn hóa truyền thống. Cầu cho cây cối đơm bông kết trái, sum xuê, tươi tốt, mùa màng bội thu, dân giàu nước mạnh. Nguồn: https://baobinhphuoc.com.vn/news/19/148060/le-hoi-cau-bong-dinh-than-hung-long-la-di-san-van-hoa-phi-vat-the-quoc-gia. Video: Đoàn Hiếu - Dovahi6', 'https://www.youtube.com/embed/FvWEmAX5Ggc?si=_bAUflOwuy4_Bc9X', '')">
-                <img src="https://imgur.com/iNCB3cX.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/iNCB3cX.png" alt="Uploaded Image">
                 <h3>Lễ hội Cầu bông ở Đình Thần Hưng Long</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Lễ hội mừng lúa mới của đồng bào S’Tiêng', 'Theo các già làng S’tiêng, lễ hội Mừng lúa mới đã có từ lâu đời, gắn liền với sản xuất nông nghiệp và thường có quy mô lớn nhất trong các lễ hội của người S’tiêng. Trước ngày diễn ra lễ hội, già làng phân công nhiệm vụ cho bà con chuẩn bị lễ vật, như:  Gạo nếp, các loại nguyên liệu để nấu canh, thịt gà, lợn... Còn các thanh niên sẽ chuẩn bị sân lễ hội, cây nêu và các vật phẩm cúng thần lúa. Các đội múa, đội cồng chiêng cũng tập luyện để biểu diễn trong suốt lễ hội. Nguồn:https://www.qdnd.vn/xa-hoi/dan-toc-ton-giao/cac-van-de/le-hoi-mung-lua-moi-cua-nguoi-s-tieng-793040. Video: Truyền Hình Nhân Dân', 'https://www.youtube.com/embed/rm7jsOIEvfw?si=FlfZZ-0hANfUkesi', '')">
-                <img src="https://imgur.com/z6JWs7p.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/z6JWs7p.png" alt="Uploaded Image">
                 <h3>Lễ hội mừng lúa mới của đồng bào S’Tiêng</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Lễ hội Phá bàu của người Khmer', 'Phá Bàu là lễ hội truyền thống, loại hình văn hóa dân gian tổng hợp, chứa đựng nhiều giá trị độc đáo riêng của đồng bào Khmer ở xã Lộc Khánh nói riêng và tỉnh Bình Phước nói chung. Lễ hội phản ánh rõ nét đời sống của cư dân nông nghiệp canh tác lúa nước và nương rẫy. Thông qua lễ hội, đồng bào Khmer cầu mong bình an, khỏe mạnh, mùa màng bội thu, cây cối tốt tươi, vạn vật sinh sôi nảy nở. Nguồn: https://baotintuc.vn/doi-song-van-hoa/le-hoi-pha-bau-net-van-hoa-doc-dao-cua-dong-bao-khmer-20240317174742213.htm#:~:text=Ph%C3%A1%20B%C3%A0u%20l%C3%A0%20l%E1%BB%85%20h%E1%BB%99i,l%C3%BAa%20n%C6%B0%E1%BB%9Bc%20v%C3%A0%20n%C6%B0%C6%A1ng%20r%E1%BA%ABy. Video: Bình Phước Portal', 'https://www.youtube.com/embed/q3C7Upj_4nU?si=QvG-_kZzoLtqU6tR', '')">
-                <img src="https://imgur.com/mVTxlji.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/mVTxlji.png" alt="Uploaded Image">
                 <h3>Lễ hội Phá bàu của người Khmer</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Lễ cầu mưa của đồng bào S’tiêng', 'Lễ hội cầu mưa tổ chức vào khoảng tháng 2, 3 âm lịch, để tri ân các vị thần như: Bra Ân - Bra Trốk (Thần trời), Bra ter (Thần đất), Bra va (Thần lúa)… và các vị thần khác đã cho mưa, cho nguồn nước giúp dân làng vượt qua hạn hán, gieo trồng đúng mùa vụ, có nguồn nước để sinh hoạt, cho con cá vẫy lội, cho cái chum, cái ché đầy nước, cho thóc gạo đầy bồ. Lễ hội có tầm quan trọng nhất đối với cuộc sống của người dân tộc S’Tiêng. Nguồn:https://honquan.binhphuoc.gov.vn/Van-hoa-The-thao/doc-dao-le-hoi-cau-mua-cua-dong-bao-s-tieng-thi-tran-tan-khai-3005.html#:~:text=Chi%E1%BB%81u%20ng%C3%A0y%2025%2F3%2F2024,h%C3%B2a%2C%20m%C3%B9a%20m%C3%A0ng%20b%E1%BB%99i%20thu. Video:Thanh Hà', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', '')">
-                <img src="https://imgur.com/un1LLxW.png"alt="Uploaded Image">
+                <img src="https://i.imgur.com/un1LLxW.png"alt="Uploaded Image">
                 <h3>Lễ cầu mưa của đồng bào S’tiêng </h3>
             </div>
         </div>
@@ -551,7 +551,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-        <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+        <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
     </button>
 
     <div id="cookie-banner" class="cookie-banner">
