--- a/nghethuat.html
+++ b/nghethuat.html
@@ -19,7 +19,7 @@
     .hero{
         width: 100%;
         height: auto;
-        background: url(https://imgur.com/Ro6x1oH.png);
+        background: url(https://i.imgur.com/Ro6x1oH.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -284,7 +284,7 @@
             </div>
             <!-- Nút hiển thị chatbot -->
             <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
     <footer>
         <div class="content">
