--- a/sinhthai.html
+++ b/sinhthai.html
@@ -152,7 +152,7 @@
         .hero {
             width: 100%; /* Chiều rộng 100% màn hình */
             height: auto; /* Chiều cao tự động */
-            background: url(https://imgur.com/3X4jkPp.png); /* Hình nền hero */
+            background: url(https://i.imgur.com/ccWCttt.png); /* Hình nền hero */
             background-repeat: no-repeat; /* Không lặp lại hình nền */
             background-size: cover; /* Phóng to hình nền để phủ hết phần tử */
             background-position: center; /* Căn giữa hình nền */
@@ -509,8 +509,8 @@
 <body>
     <section class="hero">
         <div class="hero-section">
-            <h2>DU LỊCH SINH THÁI</h2>
-            <p>Hãy tìm kiếm các địa điểm du lịch sinh thái ở Bình Phước!</p>
+            <h2>ĐỊA ĐIỂM DU LỊCH</h2>
+            <p>Hãy tìm kiếm các địa điểm du lịch Bình Phước!</p>
             <form action="#" class="search-box" onsubmit="return false;">
                 <input type="text" id="searchInput" placeholder="Tìm kiếm tại đây...">
                 <button onclick="searchContent()">
@@ -519,64 +519,65 @@
             </form>
         </div>
     </section>
-        <h1 style="margin-top: 10px;">Du lịch sinh thái</h1>
+    <h1 style="margin-top: 10px;">Du lịch sinh thái</h1>
     <main>
         <div class="grid-container">
             <div class="grid-item" onclick="showinfoBox('Vườn quốc gia Cát Tiên', 'Vườn quốc gia Cát Tiên thuộc Xã Đăng Hà, H. Bù Đăng, tỉnh Bình Phước, Vườn được mệnh danh là “ngôi nhà của muôn thú” với 96 loài thú, 94 loài bò sát, 903 côn trùng. Hiện vườn có hơn 20 cá thể voi sinh sống. Nguồn:https://baobinhphuoc.com.vn/news/9/144089/kham-pha-thien-nhien-hoang-da-vuon-quoc-gia-cat-tien', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/1A2zwxG.png" alt="Uploaded Image">
                 <h3>Vườn quốc gia Cát Tiên</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Núi Bà Rá – Thác M', 'Núi Bà Rá  thuộc P. Sơn Giang, TX. Phước Long, tỉnh Bình Phước. Với độ cao 732m, núi Bà Rá được xem là ngọn núi cao thứ 3 ở Nam Bộ. Đồng bào S’Tiêng gọi ngọn núi này với cái tên đầy thành kính “Bơnom Brah”, có nghĩa là “ngọn núi Thần” .Nguồn:https://binhphuoc.gov.vn/vi/news/van-hoa-van-nghe-the-thao/di-tich-nui-ba-ra-thac-mo-21393.html ', 'https://youtu.be/bKw_739jQTs', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/UlE5mHq.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/UlE5mHq.png" alt="Uploaded Image">
                 <h3>Núi Bà Rá – Thác Mơ</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Thác Đứng', 'Di tích Thác Đứng tọa lạc tại 02 xã: Đoàn Kết và Minh Hưng, huyện Bù Đăng, tỉnh Bình Phước. Thác Đứng còn có một tên gọi khác theo cách gọi của người S’tiêng - là N’Hai Lien Por. Theo tiếng S’tiêng thì -N’Hai- có nghĩa là chiều cao, -Lien- có nghĩa là đá và -Por- có nghĩa là máng nước. N’Hai Lien Por có thể hiểu theo nghĩa là máng nước chảy từ ghềnh đá ở trên cao xuống.', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/sgKixNL.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/sgKixNL.png" alt="Uploaded Image">
                 <h3>Thác Đứng</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Thác Đăk Mai ', 'Thác Đắk Mai thuộc xã Bù Gia Mập, huyện Bù Gia Mập, Bình Phước', 'https://youtu.be/9bZL35rf2II', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/9bfenXK.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/9bfenXK.png" alt="Uploaded Image">
                 <h3>Thác Đăk Mai </h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Thác Voi (Thác Liêng Rót)', 'Di tích Thác Voi tại xã Đồng Nai, huyện Bù Đăng, tỉnh Bình Phước. Thác Voi có chiều rộng phía mặt thác 10m và độ cao 20m tính từ mặt trên của Thác đến đáy của dòng nước đổ. Thác Liêng Rót không có hồ nước, nước chảy từ trên Thác xuống dội vào các tảng đá lớn và chảy qua các khe lớn giữa các tảng đá. Nguồn: https://baotangbinhphuoc.org.vn/di-tich-cap-tinh-thac-voi-thac-lieng-rot/', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/LPuBiSO.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/LPuBiSO.png" alt="Uploaded Image">
                 <h3>Thác Voi (Thác Liêng Rót)</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Vườn quốc gia Bù Gia Mập', 'Vườn quốc gia Bù Gia Mập thuộc  xã Bù Gia Mập, huyện Bù Gia Mập. Vườn quốc gia Bù Gia Mập có tổng diện tích là 25.601,18 ha, trong đó đó diện tích rừng tự nhiên là 25.505 ha, rừng gỗ lá rộng là 5.918 ha (4.134 ha rừng giàu, 1.310 ha rừng trung bình, 169 ha rừng nghèo, 304,8 rừng phục hồi, rừng hỗn giao 17.851 ha, và rừng tre nứa, lồ ô 1.776,5 ha). Đây là nơi lý tưởng phục vụ cho công tác nghiên cứu khoa học nhằm bảo tồn nguồn gene quý hiếm của các loài động, thực vật. Nguồn:http://vuonquocgiabugiamap.vn/vi/news/Gioi-thieu/Gioi-thieu-ve-Vuon-quoc-gia-Bu-Gia-Map-274/ ', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/RUxVFfT.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/RUxVFfT.png" alt="Uploaded Image">
                 <h3>Vườn quốc gia Bù Gia Mập</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Trảng cỏ Bù Lạch', 'Cách trung tâm huyện Bù Đăng, tỉnh Bình Phước hơn 20km, ở xã Đồng Nai có một trảng cỏ xanh rờn đến mênh mông được bao bọc giữa những cánh rừng nguyên sinh bạt ngàn, như cách biệt với thế giới bên ngoài. Nguồn:https://dangcongsan.vn/the-thao/trang-co-bu-lach-166836.html ', 'https://youtu.be/_fD1rfE4_wA', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/Cd8lOjf.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/Cd8lOjf.png" alt="Uploaded Image">
                 <h3>Trảng cỏ Bù Lạch</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Hồ Suối Giai', 'Hồ Suối Giai với diện tích mặt nước khoảng 420 ha, hồ Suối Giai trải rộng trên địa bàn 2 xã Tân Lập, Tân Tiến và thị trấn Tân Phú, huyện Đồng Phú với chiều dài khoảng hơn 15km. Với nguồn nước dồi dào, trong xanh, lại nằm ở vị trí trung tâm của huyện, cùng với hệ thống giao thông kết nối liên vùng, được đầu tư đồng bộ về cơ sở hạ tầng, điện, nhà quản lý vận hành, hơn 40 năm qua, hồ gắn bó với người dân nơi đây, là nơi cung cấp nước sạch, nước sinh hoạt và nước cho sản xuất nông nghiệp với diện tích hàng ngàn héc ta của huyện Đồng Phú và một phần huyện Phú Giáo, tỉnh Bình Dương.', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/127JnCI.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/127JnCI.png" alt="Uploaded Image">
                 <h3>Hồ Suối Giai</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Rừng cao su Bù Đăng', 'Rừng cao su ở Bù Đăng nổi tiếng trồng nhiều cao su nhất của tỉnh Bình Phước, với những hàng cao su bạt ngàn.  Vào khoảng thời gian cuối tháng 1 cho đến đầu tháng 4 là những cánh rừng phương Nam sẽ rực lên một màu đỏ. Đó chính là mùa của những cánh rừng cao su đang đồng loạt thay lá trong đó có những cánh rừng cao su tại Bình Phước.Nguồn:https://dulichviet.com.vn/tin-tuc/ngat-ngay-truoc-ve-dep-cua-nhung-rung-cao-su-o-viet-nam', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/qPTivmA.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/qPTivmA.png" alt="Uploaded Image">
                 <h3>Rừng cao su Bù Đăng</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Khu du lịch Đảo Yến', 'Khu du lịch Đảo Yến có diện tích hơn 10ha, trong đó có 3ha ốc đảo nằm giữa hồ đập Bà Mụ với mặt nước tự nhiên rộng mênh mông đến 110ha.', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/vP1mykJ.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/vP1mykJ.png" alt="Uploaded Image">
                 <h3>Khu du lịch Đảo Yến</h3>
             </div>
 
             <div class="grid-item" onclick="showinfoBox('Nông trại Phú Gia', 'Nông trại Phú Gia tọa lạc tại xã Tân Hiệp, huyện Hớn Quản, tỉnh Bình Phước, diện tích hơn 450ha. Với lợi thế nằm cặp theo hồ Dầu Tiếng và mảng xanh lớn bao phủ giúp làm dịu đi cái nắng nóng của khí hậu nơi đây và tạo nên không khí mát mẻ, trong lành, thích hợp nghỉ dưỡng.', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
-                <img src="https://imgur.com/mquuNQq.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/mquuNQq.png" alt="Uploaded Image">
                 <h3>Nông trại Phú Gia</h3>
             </div>
         </div>
+
     </main>
     <!-- Overlay background -->
     <div class="overlay" onclick="hideinfoBox()"></div>
@@ -612,7 +613,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-        <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+        <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
     </button>
 
     <div id="cookie-banner" class="cookie-banner">
