--- a/vuichoi.html
+++ b/vuichoi.html
@@ -152,7 +152,7 @@
         .hero {
             width: 100%; /* Chiều rộng 100% màn hình */
             height: auto; /* Chiều cao tự động */
-            background: url(https://imgur.com/rB6JFik.png); /* Hình nền hero */
+            background: url(https://i.imgur.com/ccWCttt.png); /* Hình nền hero */
             background-repeat: no-repeat; /* Không lặp lại hình nền */
             background-size: cover; /* Phóng to hình nền để phủ hết phần tử */
             background-position: center; /* Căn giữa hình nền */
@@ -509,8 +509,8 @@
 <body>
     <section class="hero">
         <div class="hero-section">
-            <h2>VUI CHƠI GIẢI TRÍ</h2>
-            <p>Hãy tìm kiếm các địa điểm vui chơi giải trí ở Bình Phước!</p>
+            <h2>ĐỊA ĐIỂM DU LỊCH</h2>
+            <p>Hãy tìm kiếm các địa điểm du lịch Bình Phước!</p>
             <form action="#" class="search-box" onsubmit="return false;">
                 <input type="text" id="searchInput" placeholder="Tìm kiếm tại đây...">
                 <button onclick="searchContent()">
@@ -519,36 +519,38 @@
             </form>
         </div>
     </section>
+    
     <h1 style="margin-top: 10px;">Vui chơi giải trí</h1>
     <main>
         <div class="grid-container">
             <div class="grid-item" onclick="showinfoBox('Bình Long Phố', 'Tuy chỉ mới đi vào hoạt động gần đây nhưng không gian vui chơi giải trí có hồ bơi lớn tích hợp quán cà phê, phim trường cũng như trung tâm tổ chức sự kiện và tiệc cưới của Bình Long Phố đã nhanh chóng thu hút đông đảo các bạn gần xa. Nơi đây hiện đang là địa điểm -làm mưa làm gió- tại khu vực Bình Long, nhất là trong những ngày hè oi bức.', 'https : //www.youtube.com/embed/IGxhpq_bpQg?si=FB9cxx7IUhMcKl85', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3907.412098449949!2d106.60302907360773!3d11.665179242175208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31735528e87e13f3%3A0xe407f2b4f692c698!2zQsOsbmggTG9uZyBQaOG7kSBQYXJr!5e0!3m2!1svi!2s!4v1735025832334!5m2!1svi!2s')">
-                <img src="https://imgur.com/qQCJ8gz.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/qQCJ8gz.png" alt="Uploaded Image">
                 <h3>Bình Long Phố</h3>
             </div>
             <div class="grid-item" onclick="showinfoBox('Chơn Thành cinema', 'Tuy chỉ mới đi vào hoạt động gần đây nhưng không gian vui chơi giải trí có hồ bơi lớn tích hợp quán cà phê, phim trường cũng như trung tâm tổ chức sự kiện và tiệc cưới của Bình Long Phố đã nhanh chóng thu hút đông đảo các bạn gần xa. Nơi đây hiện đang là địa điểm -làm mưa làm gió- tại khu vực Bình Long, nhất là trong những ngày hè oi bức.','https : //www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.884578935037!2d106.61475707360361!3d11.415922847075635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174ad0004eaa6eb%3A0x53b5bfea35adb360!2zQ2jGoW4gVGjDoG5oIENpbmVtYQ!5e0!3m2!1svi!2s!4v1735025879492!5m2!1svi!2s')">
-                <img src="https://imgur.com/tBkj9xa.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/tBkj9xa.png" alt="Uploaded Image">
                 <h3>Chơn Thành cinema</h3>
             </div>
         
             <div class="grid-item" onclick="showinfobox('Chợ Đêm Chơn Thành', 'Là một trong cái địa điểm về đêm sầm uất và nổi bật nhất về đêm tại đây với khu plaza và các hàng quán ăn uống kèm theo đó là các trò chơi lô tô, hát với nhau,...','https : //www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.881700458367!2d106.61484837593268!3d11.41613168877424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174adfc01225585%3A0xa0de38e9c60a47cb!2zVFRUTSBDSMagTiBUSMOATkggUExBWkEsIELDjE5IIFBIxq_hu5pD!5e0!3m2!1svi!2s!4v1736846633819!5m2!1svi!2s')">
-                <img src="https://imgur.com/W3JkbgX.png" alt="uploaded image">
+                <img src="https://i.imgur.com/W3JkbgX.png" alt="uploaded image">
                 <h3>Chợ Đêm Chơn Thành</h3>
             </div>  
             <div class="grid-item" onclick="showinfobox('quảng trường đồng xoài ', 'Quảng trường thành phố Đồng Xoài được xây dựng trong khu trung tâm hành chính thành phố, trên khuôn viên rộng 21.900m2 - nguyên là sân vận động thành phố. Theo thiết kế, ngoài hạng mục chính là sân tập trung - quảng trường sự kiện, lễ hội với diện tích gần 6.000m2, công trình còn có các hạng mục như: sân khấu biểu diễn, khu vực nhạc nước, vườn hoa cảnh và các khu thể thao, vui chơi, giải trí...','https : //www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31279.28798647775!2d106.59031186603116!3d11.486345227356148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174ac0c2efef2f1%3A0xebf6117ca521e05c!2zTWluaCBIxrBuZywgQ2jGoW4gVGjDoG5oLCBCw6xuaCBQaMaw4bubYywgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1736864965108!5m2!1svi!2s')">
-                <img src="https://imgur.com/1ZyQ3CH.png" alt="uploaded image">
+                <img src="https://i.imgur.com/1ZyQ3CH.png" alt="uploaded image">
                 <h3>Quảng trường Đồng Xoài</h3>
             </div> 
             <div class="grid-item" onclick="showinfobox('the gold đồng xoài ', 'Nằm trong Khu đô thị The Gold City tại ấp 2, phường Tiến Thành, Thành phố Đồng Xoài, siêu thị The Gold Mart chính thức khai trương ngày 25/1/2019.','https : //www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.4113736246013!2d106.8571608759338!3d11.522319888675531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174a17a58bd486b%3A0x80cdcdaa8cef4d02!2sThe%20Gold%20Cinema!5e0!3m2!1svi!2s!4v1736866118132!5m2!1svi!2s')">
-                <img src="https://imgur.com/XSoHyZQ.png" alt="uploaded image">
+                <img src="https://i.imgur.com/XSoHyZQ.png" alt="uploaded image">
                 <h3>The Gold Đồng Xoài</h3>
             </div>
             <div class="grid-item" onclick="showinfobox('Co.opmart đồng xoài ', 'oopMart Đồng Xoài nằm ngay vị trí đắc địa giao giữa Phú Riềng Đỏ và DT753. Đây là vị trí trung tâm thương mại của thị xã Đồng Xoài tỉnh Bình Phước.','https : //www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.2631584615924!2d106.89464227593398!3d11.532970588665615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174a03a84250649%3A0xb294fa1d825f065!2zQ28ub3AgTWFydCDEkOG7k25nIFhvw6Bp!5e0!3m2!1svi!2s!4v1736866035822!5m2!1svi!2s')">
-                <img src="https://imgur.com/YvV2PBD.png" alt="uploaded image">
+                <img src="https://i.imgur.com/YvV2PBD.png" alt="uploaded image">
                 <h3>Co.opmart đồng xoài</h3>
             </div>
         </div>
     </main>
+
     <!-- Overlay background -->
     <div class="overlay" onclick="hideinfoBox()"></div>
 
@@ -583,7 +585,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-        <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+        <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
     </button>
 
     <div id="cookie-banner" class="cookie-banner">
