--- a/game.html
+++ b/game.html
@@ -530,7 +530,7 @@
               <p>Rung Chuông Vàng - Kiến Thức Vang Danh!</p>
               <a href="#" class="btn-animated play-button"
                  data-title="RING THE GOLDEN BELL"
-                 data-embed="<iframe src='https://quizizz.com/join?gc=10319072' width='200%' height='400px' frameborder='0' allowfullscreen></iframe>">
+                 data-embed="<iframe src='https://quizizz.com/embed/quiz/67556071149b0bef0f600590' width='200%' height='400px' frameborder='0' allowfullscreen></iframe>">
                 <i>▶</i> CHƠI NGAY
               </a>
             </div>
