--- a/game.html
+++ b/game.html
@@ -544,7 +544,7 @@
               <p>Kiến thức tạo nên sự thông thái</p>
               <a href="#" class="btn-animated play-button"
                  data-title="TRY KNOWLEDGEABLE"
-                 data-embed="<iframe src='https://quizizz.com/join?gc=38152528' frameborder='0' allowfullscreen></iframe>">
+                 data-embed="<iframe src='https://quizizz.com/embed/quiz/676185d5f7cf4f06ebd6abe2' frameborder='0' allowfullscreen></iframe>">
                 <i>▶</i> CHƠI NGAY
               </a>
             </div>
